--- a/front/package.json
+++ b/front/package.json
@@ -15,10 +15,12 @@
     "@nuxtjs/auth-next": "5.0.0-1612791489.a5d8c28",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/style-resources": "^1.0.0",
+    "axios": "^0.21.1",
     "baron": "^3.0.3",
     "node-sass": "^5.0.0",
     "nuxt": "^2.0.0",
     "nuxt-sass-resources-loader": "^2.0.5",
+    "vue-notification": "^1.3.20",
     "vuelidate": "^0.7.6"
   },
   "devDependencies": {
